--- a/docker-compose.yml.template
+++ b/docker-compose.yml.template
@@ -5,6 +5,6 @@ services:
     image: your-docker-hub-username/your-repo-name
     container_name: your-container-name
     ports:
-      - '12345:12345'
+      - INTERNAL_PORT:8080
     environment:
       - NODE_ENV=production
