--- a/docker-compose.yml.template
+++ b/docker-compose.yml.template
@@ -1,10 +1,8 @@
-version: '3.8'
+version: '3'
 
 services:
-  app:
-    image: your-docker-hub-username/your-repo-name
-    container_name: your-container-name
+  your-app:
+    build: .
+    env_file: .env
     ports:
-      - INTERNAL_PORT:8080
-    environment:
-      - NODE_ENV=production
+      - '12400:8080'
