--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.3.5",
     "express": "^4.18.2",
+    "express-basic-auth": "^1.2.1",
     "fluent-ffmpeg": "^2.1.2",
     "multer": "^1.4.5-lts.1",
     "openai": "^3.2.1",
