--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "REST api for p2s",
   "main": "server.js",
   "scripts": {
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "tsc-watch --onSuccess \"node dist/index.js\"",
+    "lint": "eslint --fix \"src/**/*.ts\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -18,6 +22,20 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "dotenv": "^16.0.3"
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.17",
+    "@types/fluent-ffmpeg": "^2.1.21",
+    "@types/multer": "^1.4.7",
+    "@types/node": "^18.15.11",
+    "@types/uuid": "^9.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.57.1",
+    "@typescript-eslint/parser": "^5.57.1",
+    "dotenv": "^16.0.3",
+    "eslint": "^8.38.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^4.2.1",
+    "tsc-watch": "^6.0.0",
+    "typescript": "^5.0.4"
   }
 }
