--- a/package.json
+++ b/package.json
@@ -13,16 +13,19 @@
   "author": "",
   "dependencies": {
     "axios": "^1.3.5",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-basic-auth": "^1.2.1",
     "fluent-ffmpeg": "^2.1.2",
+    "google-auth-library": "^8.7.0",
     "multer": "^1.4.5-lts.1",
     "openai": "^3.2.1",
     "stability-client": "^1.8.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/fluent-ffmpeg": "^2.1.21",
     "@types/multer": "^1.4.7",
