make  logging amazing. add database.  add  videos endpoint

--- a/.env.template
+++ b/.env.template
@@ -5,7 +5,14 @@ COQUI_API_KEY=
 FFMPEG_PATH=
 FFPROBE_PATH=
 
-REFERER=
-
+ALLOWED_ORIGINS=domain1,domain2,domain3
+GOOGLE_CLIENT_ID=
 ### API SECRETS ###
 API_TOKEN=
+
+### DATABASE ###
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_DB=
+POSTGRES_HOST=
+POSTGRES_PORT=
