refactoring for better prompts

--- a/.env.template
+++ b/.env.template
@@ -1,12 +1,11 @@
 OPENAI_API_KEY=
-DREAMSTUDIO_API_KEY=
-COQUI_API_KEY=
 
 FFMPEG_PATH=
 FFPROBE_PATH=
 
 ALLOWED_ORIGINS=domain1,domain2,domain3
 GOOGLE_CLIENT_ID=
+
 ### API SECRETS ###
 API_TOKEN=
 
@@ -18,3 +17,4 @@ POSTGRES_HOST=
 POSTGRES_PORT=
 
 LOCAL_AI_SERVER=
+LOCAL_SECONDARY_AI_SERVER=
