big db refactor. integrate ms for tts now rip coqui

--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,6 @@
 OPENAI_API_KEY=
+SPEECH_KEY=
+SPEECH_REGION=
 
 FFMPEG_PATH=
 FFPROBE_PATH=
@@ -10,11 +12,10 @@ GOOGLE_CLIENT_ID=
 API_TOKEN=
 
 ### DATABASE ###
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_DB=
-POSTGRES_HOST=
-POSTGRES_PORT=
+MYSQL_HOST=
+MYSQL_DB=
+MYSQL_USER=
+MYSQL_PASSWORD=
 
 LOCAL_AI_SERVER=
 LOCAL_SECONDARY_AI_SERVER=
