--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "REST api for p2s",
   "main": "server.js",
   "scripts": {
-    "build": "tsc && node copy-sql-files.js",
+    "build": "tsc",
     "start": "node dist/index.js",
     "dev": "tsc-watch --onSuccess \"node dist/index.js\"",
     "lint": "eslint --fix \"src/**/*.ts\"",
@@ -19,10 +19,11 @@
     "express-basic-auth": "^1.2.1",
     "fluent-ffmpeg": "^2.1.2",
     "google-auth-library": "^9.1.0",
+    "microsoft-cognitiveservices-speech-sdk": "^1.34.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.7.0",
     "openai": "^4.12.4",
-    "pg-promise": "^11.5.4",
     "uuid": "^9.0.1",
     "winston": "^3.11.0",
     "winston-daily-rotate-file": "^4.7.1"
@@ -34,7 +35,6 @@
     "@types/morgan": "^1.9.6",
     "@types/multer": "^1.4.8",
     "@types/node": "^20.8.6",
-    "@types/pg-promise": "^5.4.3",
     "@types/uuid": "^9.0.5",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
     "@typescript-eslint/parser": "^6.8.0",
