all the things to use new coqui and ollama

--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,9 @@
 SPEECH_KEY=
 SPEECH_REGION=
 
-COQUI_URL=
+COQUI_URL_BASE=
+COQUI_URL_PORTS=
+OLLAMA_BASE_URL=
 
 FFMPEG_PATH=
 FFPROBE_PATH=
@@ -18,5 +20,4 @@ MYSQL_DB=
 MYSQL_USER=
 MYSQL_PASSWORD=
 
-LOCAL_AI_SERVER=
-LOCAL_SECONDARY_AI_SERVER=
+IMAGE_AI_SERVER=
