--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.7.0",
+    "ollama": "^0.5.0",
     "openai": "^4.24.7",
     "uuid": "^9.0.1",
     "winston": "^3.11.0",
