--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,9 @@
-OPENAI_API_KEY=
 SPEECH_KEY=
 SPEECH_REGION=
+
+COQUI_URL_BASE=
+COQUI_URL_PORTS=
+OLLAMA_BASE_URL=
 
 FFMPEG_PATH=
 FFPROBE_PATH=
@@ -17,5 +20,4 @@ MYSQL_DB=
 MYSQL_USER=
 MYSQL_PASSWORD=
 
-LOCAL_AI_SERVER=
-LOCAL_SECONDARY_AI_SERVER=
+IMAGE_AI_SERVER=
